Fix Bug 315617 - kmail asks to resize images when there aren't any

FIXED-IN: 4.10.1
BUG: 315617